[metadata]
name = no-change-parking
# version = attr: src.VERSION
version = 0.0.1
author = Mike Scott
author_email = mike.scott@nttdata.com
description = No Change Parking application
long_description = file: README.md, LICENSE
url = https://github.com/mikeascott/python-no-change-parking
keywords = python, flask, no-change-parking
license = MIT
classifiers =
    Framework :: Flask App Builder
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
platforms =
    any

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
  flask
  flask-appbuilder
